--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
   <h2>hello world</h2>
   <h3>third time push</h3>
   <h3>testing how to fetch from remote and edit local</h3>
+  
+  <script>
+    function a1 () {
+      console.log('the first feature');
+    }
+  </script>
 </body>
 </html>
