--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     function a1 () {
       console.log('the first feature');
     }
+    function a2 () {
+      console.log('the second feature');
+    }
   </script>
 </body>
 </html>
